--- a/collection.html
+++ b/collection.html
@@ -12,7 +12,7 @@
         <div class="nav-logo"><a href="index.html"><img src="assets/img/logo.png" alt="Logo"></a></div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="collection.html">Collection</a></li>
+            <li><a href="collection.html" class="active">Collection</a></li>
             <li><a href="legacy.html">Legacy</a></li>
             <li><a href="advisory.html">Advisory</a></li>
             <li><a href="team.html">Company</a></li>
@@ -21,7 +21,7 @@
         <div class="hamburger">☰</div>
     </nav>
 
-    <section class="hero" style="background-image: url('assets/img/hero.jpg'); height: 60vh;">
+    <section class="hero" style="background-image: url('assets/img/hero.jpg'); height: 50vh;">
         <div class="hero-overlay"></div>
         <div class="hero-content fade-up">
             <h1>Curated Assets</h1>
@@ -32,63 +32,70 @@
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
             <div class="glass-card fade-up">
                 <h3>Invest With Us</h3>
-                <p>Maximize ROI with strategic acquisitions.</p>
-                <a href="contact.html" class="btn btn-red">Start Investing</a>
+                <p>Strategic acquisition advice based on Abitec's technical data.</p>
+                <a href="contact.html" class="btn btn-black">Start Investing</a>
             </div>
             <div class="glass-card fade-up">
                 <h3>List With Us</h3>
-                <p>Global exposure for your premium assets.</p>
+                <p>Access our private network of UHNW investors.</p>
                 <a href="contact.html" class="btn btn-outline">Submit Property</a>
             </div>
         </div>
     </div>
 
-    <div style="margin-top: 80px;">
-        <div class="editorial-row fade-up">
-            <div class="editorial-img" style="background-image: url('assets/img/res1.jpg');"></div>
-            <div class="editorial-text glass-card" style="border:none; background: rgba(255,255,255,0.95);">
-                <span class="red-text subtitle">Palm Jumeirah</span>
-                <h2>Signature Villa V</h2>
-                <p>A masterpiece of modern architecture on the frond, offering unparalleled privacy and luxury.</p>
-                <ul style="list-style:none; margin-bottom: 2rem; color:#666; font-family: var(--font-sans);">
-                    <li><strong>Price:</strong> AED 45,000,000</li>
-                    <li><strong>Size:</strong> 7,000 Sq.Ft</li>
-                    <li><strong>Beds:</strong> 6 + Maid</li>
-                </ul>
-                <a href="contact.html" class="btn btn-outline">Enquire Now</a>
+    <section class="container section-padding fade-up">
+        <div class="carousel-header">
+            <h2>Editor's Choice: Exclusive</h2>
+            <div class="swiper-nav-btns">
+                <div class="lux-prev prev-1">←</div>
+                <div class="lux-next next-1">→</div>
             </div>
         </div>
+        <div class="swiper swiper-manual-1">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/res1.jpg" class="card-img"><div class="card-info"><span class="card-type">VILLA</span><h3>Palm Frond V</h3><div class="card-price">AED 45,000,000</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/com1.jpg" class="card-img"><div class="card-info"><span class="card-type">OFFICE</span><h3>The Opus</h3><div class="card-price">AED 22,000,000</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/offplan1.jpg" class="card-img"><div class="card-info"><span class="card-type">OFF-PLAN</span><h3>Dubai Harbour</h3><div class="card-price">AED 3,500,000</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/res2.jpg" class="card-img"><div class="card-info"><span class="card-type">PLOT</span><h3>Emirates Hills</h3><div class="card-price">AED 38,000,000</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/com2.jpg" class="card-img"><div class="card-info"><span class="card-type">RETAIL</span><h3>DIFC Spine</h3><div class="card-price">AED 18,000,000</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/offplan2.jpg" class="card-img"><div class="card-info"><span class="card-type">OFF-PLAN</span><h3>Palm Jebel Ali</h3><div class="card-price">AED 28,500,000</div></div></div></div>
+            </div>
+        </div>
+    </section>
 
-        <div class="editorial-row fade-up">
-            <div class="editorial-img" style="background-image: url('assets/img/com1.jpg');"></div>
-            <div class="editorial-text glass-card" style="border:none; background: rgba(255,255,255,0.95);">
-                <span class="red-text subtitle">Business Bay</span>
-                <h2>Opus Commercial</h2>
-                <p>Full floor shell and core in Zaha Hadid's icon. A statement address for a global firm.</p>
-                <ul style="list-style:none; margin-bottom: 2rem; color:#666; font-family: var(--font-sans);">
-                    <li><strong>Price:</strong> AED 22,000,000</li>
-                    <li><strong>Size:</strong> 12,000 Sq.Ft</li>
-                    <li><strong>Type:</strong> Commercial Office</li>
-                </ul>
-                <a href="contact.html" class="btn btn-outline">Enquire Now</a>
+    <section class="container section-padding fade-up" style="border-top:1px solid #eee;">
+        <div class="carousel-header">
+            <h2>Residential Portfolio</h2>
+            <div class="swiper-nav-btns">
+                <div class="lux-prev prev-2">←</div>
+                <div class="lux-next next-2">→</div>
             </div>
         </div>
-        
-        <div class="editorial-row fade-up">
-            <div class="editorial-img" style="background-image: url('assets/img/offplan1.jpg');"></div>
-            <div class="editorial-text glass-card" style="border:none; background: rgba(255,255,255,0.95);">
-                <span class="red-text subtitle">Dubai Harbour</span>
-                <h2>Seafront Luxury</h2>
-                <p>Exclusive off-plan opportunity with panoramic views of the Arabian Gulf and Dubai Marina skyline.</p>
-                <ul style="list-style:none; margin-bottom: 2rem; color:#666; font-family: var(--font-sans);">
-                    <li><strong>Starting Price:</strong> AED 3,500,000</li>
-                    <li><strong>Type:</strong> 1-3 BR Apartments</li>
-                    <li><strong>Handover:</strong> Q4 2026</li>
-                </ul>
-                <a href="contact.html" class="btn btn-outline">Request Brochure</a>
+        <div class="swiper swiper-manual-2">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/res1.jpg" class="card-img"><div class="card-info"><h3>Signature Villa</h3><div class="card-price">AED 45M</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/res2.jpg" class="card-img"><div class="card-info"><h3>Hills Mansion</h3><div class="card-price">AED 65M</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/res1.jpg" class="card-img"><div class="card-info"><h3>Downtown Penthouse</h3><div class="card-price">AED 55M</div></div></div></div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="container section-padding fade-up" style="border-top:1px solid #eee;">
+        <div class="carousel-header">
+            <h2>Commercial Assets</h2>
+            <div class="swiper-nav-btns">
+                <div class="lux-prev prev-3">←</div>
+                <div class="lux-next next-3">→</div>
+            </div>
+        </div>
+        <div class="swiper swiper-manual-3">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/com1.jpg" class="card-img"><div class="card-info"><h3>Business Bay</h3><div class="card-price">AED 22M</div></div></div></div>
+                <div class="swiper-slide"><div class="listing-card"><img src="assets/img/com2.jpg" class="card-img"><div class="card-info"><h3>DIFC Retail</h3><div class="card-price">AED 18M</div></div></div></div>
+            </div>
+        </div>
+    </section>
+
 
     <footer>
         <div class="container footer-grid">
@@ -116,4 +123,5 @@
     </div>
     <script src="js/core.js"></script>
 </body>
+
 </html>
