--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Luxury Network | The Red Standard">
+<meta property="og:description" content="Global Real Estate Brokerage. Builder Before Broker.">
+<meta property="og:image" content="https://your-website.com/assets/img/share-preview.jpg">
+<meta property="og:url" content="https://your-website.com">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Network Real Estate | The Sovereign Standard</title>
@@ -71,4 +75,5 @@
 
     <script src="js/core.js"></script>
 </body>
+
 </html>
